# 3w

./: 3w项目逻辑梳理.xmind  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  GlobalHelper.cpp  GlobalHelper.h  InputDialog.ui  README.md  RenameDialog.cpp  RenameDialog.h  RenameDialog.ui  icons.qrc  inputdialog.cpp  inputdialog.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurementpage.cpp  measurementpage.h  measurementpage.ui  personalpage.cpp  personalpage.h  personalpage.ui
db/: database.db
lib/: WanosAutoTuning.h  WanosAutoTuning_global.h  libWanosAutoTuning.dylib  speakerconfig.h  tuningmode.h  tuningpoint.h  wanosFilterManager.h
widgets/: AutomaticSoundFieldEqualization.cpp  AutomaticSoundFieldEqualization.h  ChannelMeasurement.cpp  ChannelMeasurement.h  ChannelRouting.cpp  ChannelRouting.h  DatabaseManager.h  FrequencyDivisionConfiguration.cpp  FrequencyDivisionConfiguration.h  FrequencyResponseOfSoundField.cpp  FrequencyResponseOfSoundField.h  LoudnessGain.cpp  LoudnessGain.h  LoudnessGainSingleWidget.cpp  LoudnessGainSingleWidget.h  LoudspeakerFrequencyResponse.cpp  LoudspeakerFrequencyResponse.h  ManualTuning.cpp  ManualTuning.h  data.cpp  data.h  movebuttonview.cpp  movebuttonview.h  progress_frame.cpp  progress_frame.h
widgets/ui/: AutomaticSoundFieldEqualization.ui  ChannelMeasurement.ui  ChannelRouting.ui  FrequencyDivisionConfiguration.ui  FrequencyResponseOfSoundField.ui  LoudnessGain.ui  LoudnessGainSingleWidget.ui  LoudspeakerFrequencyResponse.ui  ManualTuning.ui  progress_frame.ui
